--- a/debian/control
+++ b/debian/control
@@ -11,5 +11,5 @@ Homepage: https://github.com/dosemu2/install-otherdos
 Package: install-otherdos
 Architecture: all
 Depends: python3, python3-tqdm
-Description: various DOS installer scripts
- A set of scripts to install various DOSes.
+Description: various DOS installers for dosemu2
+ A set of scripts to install various DOSes for dosemu2.
