--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,6 @@ Homepage: https://github.com/dosemu2/install-otherdos
 
 Package: install-otherdos
 Architecture: all
-Depends: python3, python3-libarchive-c, python3-tqdm
+Depends: python3, python3-libarchive-c, python3-tqdm, mtools
 Description: various DOS installers for dosemu2
  A set of scripts to install various DOSes for dosemu2.
